--- a/week6/task1/style.css
+++ b/week6/task1/style.css
@@ -2,7 +2,7 @@
     display: grid;
     width: 100%;
     grid-template-columns: 1fr 1fr 20vw;
-    grid-template-rows: 10% 15% 1fr 5% 1rf 10%;
+    grid-template-rows: 7% 15% 1fr 5% 1fr 8%;
     grid-template-areas:
         "header header  header"
         "intro intro aside"
@@ -28,8 +28,7 @@ h3,
     grid-template-columns: 150px 1fr;
     grid-template-rows: 1fr;
     align-items: center;
-    justify-items: endcenter;
-
+    justify-items: center;
 }
 
 .logo img {
@@ -43,7 +42,7 @@ h3,
 }
 
 .menu_item a {
-    margin: 0px 3vw 0px 3vw;
+    margin: 0 3vw 0 3vw;
     text-decoration: none;
     font-size: 20px;
     font-weight: bold;
@@ -64,7 +63,6 @@ h3,
     max-width: 95%;
     border: 5px solid cadetblue;
     border-radius: 20px;
-    margin: 10p
 }
 
 .content2 {
@@ -118,8 +116,8 @@ h3,
 footer {
     grid-area: footer;
     background-color: cadetblue;
-    margin-top: 3vh;
-    font-display: grid;
+    margin-top: 4vh;
+    display: grid;
     grid-template-columns: 250px 1fr;
     grid-template-rows: 1fr;
     display: grid;
