--- a/week6/task2/style.css
+++ b/week6/task2/style.css
@@ -1,111 +1,133 @@
-.container{
-    
+.container {
     max-width: 1440px;
-    display:grid;
+    display: grid;
     grid-template-columns: repeat(5, fr);
-    grid-template-rows: 10% 1 fr;
+    grid-template-rows: 10% 1fr;
     grid-template-areas:
-    "aside header header header header"
-    "aside main main main main";
-    margin:auto;
+        "aside header header header header"
+        "aside main main main main";
+    margin: auto;
     background: rgba(255, 255, 255, 0.8);
     font-family: 'Poppins', sans-serif;
-    
-
 }
 
-.header{
+.header {
     grid-area: header;
-    padding:40px;    
+    padding: 40px;
+
 }
 
-.header_items a{
-    
-    text-decoration: none;
-    color: black; 
-    margin-right: 30px;
+.header_items {
+    display: flex;
+    justify-content: flex-end;
 }
 
-
-.header_item{
-    
-   
-}
-
-.aside{
-    grid-area: aside;
-    justify-self: center;
-    
-}
-
-.list li{
-    list-style: none;
-    font-size: 15px;
-    line-height: 25px;
-    margin: 20px 20px;
-}
-.list li a{
+.header_items a {
     text-decoration: none;
     color: black;
 }
 
-.list li a:hover{
-    text-decoration: underline salmon;
+.link {
+    margin-left: 5%;
 }
 
-h1{
-    text-align: center;
+.header_items a:hover {
+    background-color: rgb(255, 193, 187);
 }
 
-.list{
-    margin-top:50px;
+.extra {
+    margin-right: auto;
+}
+
+.aside {
+    grid-area: aside;
+    justify-self: center;
+}
+
+.list li {
+    list-style: none;
+    font-size: 15px;
+    line-height: 25px;
+    margin: 30px 30px;
+}
+
+.list li a {
+    text-decoration: none;
+    color: black;
+}
+
+.list li a:hover {
+    background-color: rgb(255, 193, 187);
+}
+
+h1 {
+    margin-left: 20px;
+}
+
+.icon {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.list {
+    margin-top: 50px;
     padding-left: 0;
 }
 
-.logo{
+.logo {
     margin: 50px;
 }
 
 
-.main{
+.main {
     grid-area: main;
-    display:grid;
-    grid-template-columns: repeat(2, 1fr);
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 1fr);
-    justify-items: center;
-    gap:10px;
-    margin-top: 40px;
+    gap: 20px;
 }
 
-.content1{
-    grid-column:1/2;
-    grid-row: 1/2;
+.main img {
+    width: 100%;
 }
-.content2{
-    grid-column:1/2;
+
+.content1 {
+    grid-column: 1/3;
+    grid-row: 1/2;
+
+}
+
+.content2 {
+    grid-column: 1/3;
     grid-row: 2/3;
 }
-.content3{
-    grid-column:2/3;
+
+.content31 {
+    grid-column: 3/4;
     grid-row: 1/3;
-    
 }
-.content4{
-    grid-column:1/2;
+
+.content32 {
+    grid-column: 4/5;
+    grid-row: 1/3;
+}
+
+.content41 {
+    grid-column: 1/2;
     grid-row: 3/5;
 }
-.content5{
-    grid-column:2/3;
+
+.content42 {
+    grid-column: 2/3;
+    grid-row: 3/5;
+}
+
+.content5 {
+    grid-column: 3/5;
     grid-row: 3/4;
 }
-.content6{
-    grid-column:2/3;
+
+.content6 {
+    grid-column: 3/5;
     grid-row: 4/5;
 }
-
-
-
-
-
-
-
