--- a/week5/style.css
+++ b/week5/style.css
@@ -23,8 +23,8 @@ h1,h2,h3{
 }
  .menu_item a{
      text-decoration: none;
-     margin: 0 30px;
-     font-size: 20px;
+     margin: 10px 30px;
+     font-size: 18px;
      font-weight: bold;
      color: cornsilk;
  }
@@ -34,7 +34,7 @@ h1,h2,h3{
  }
 
 .main{
-    width: 80vw;
+    max-width: 80vw;
     display: flex;
     flex-wrap: wrap;    
 }
@@ -52,7 +52,7 @@ h1,h2,h3{
 }
 
  .photo{
-     width:45%;
+     max-width:45%;
      border: 5px solid cadetblue;
      border-radius: 20px;
      margin: 10px ;
@@ -81,7 +81,7 @@ h1,h2,h3{
  }
 
 .down_item{
-    max-width: 19vw;
+    max-width: 23%;
     border-radius: 20px;
     margin: 5px;
     padding: 5px;
@@ -89,17 +89,24 @@ h1,h2,h3{
 }
 
 .aside{
-    width: 20vw;
+    max-width: 20vw;
     text-align: center;
+    
+}
+.aside_wrapper{
+    display: flex;
+    width: 20vw;
+    flex-direction: column;
+    align-items: center;
 }
 
 .aside img{
-    width: 15vw;
+    max-width: 15vw;
 }
 
 .footer{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     height: 8vh;
     margin-top: 10vh;
@@ -110,23 +117,78 @@ h1,h2,h3{
 
 .footer_item a{
     display: inline-block;
-    min-width: 15vw;
+    max-width: 15vw;
     text-align: center;
     text-decoration: none;
-    font-size: large;
+    font-size: 16px;
     margin-left: 5vw; 
     margin-right: 5vw;
     color:cornsilk;       
 }
 .address{
     padding:5px;
-    line-height: 0.5em;
+    line-height: 0.3em;
     margin-left: 5vw;
     color:cornsilk
 }
 
 
 
+@media all and (max-width:800px){
+    .menu_item{
+        display: flex;
+        flex-direction: column;
+    }
+    
+    
+    .body_item{
+        display: flex;
+        flex-direction: column;  
+    }
 
+    .main{
+        max-width: 100vw;
+    }
+    
+    .aside{
+        max-width: 100vw;
+    }
+    .aside img{
+        max-width: 150px;
+    }
+        
+    .aside_wrapper{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        width: 100vw;
+        flex-wrap: wrap;    
+    }
+    .down{
+        flex-wrap: wrap;
+        border: none;
+    }
+    .down_item{
+        max-width:200px ;
+    }
+
+    
+}
+
+@media all and (max-width:600px){
+    .middle_item{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .photo{
+        max-width: 80vw;
+    }
+    .list{
+        line-height: 1 em;
+        font-size: 16px;
+    }
+    
+}
 
 
