--- a/week5/style.css
+++ b/week5/style.css
@@ -1,86 +1,92 @@
-body{
+body {
     font-size: 16px;
     background-color: bisque;
-    
+
 }
-h1,h2,h3{
+
+h1,
+h2,
+h3 {
     text-align: center;
 }
 
-.header{
+.header {
     display: flex;
     align-items: center;
-    background-color:cadetblue;
+    background-color: cadetblue;
 }
 
-.logo img{
+.logo img {
     width: 70px;
     border-radius: 30%;
     margin: 10px;
 }
-.menu_item{
+
+.menu_item {
     margin-left: auto;
 }
- .menu_item a{
-     text-decoration: none;
-     margin: 10px 30px;
-     font-size: 18px;
-     font-weight: bold;
-     color: cornsilk;
- }
 
- .body_item{
-     display: flex;
- }
-
-.main{
-    max-width: 80vw;
-    display: flex;
-    flex-wrap: wrap;    
+.menu_item a {
+    text-decoration: none;
+    margin: 10px 25px;
+    font-size: 18px;
+    font-weight: bold;
+    color: cornsilk;
 }
 
-.intro{
+.body_item {
+    display: flex;
+}
+
+.main {
+    max-width: 80vw;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.intro {
     padding: 20px;
 }
 
-.middle_item{
+.middle_item {
     display: flex;
-    justify-content:space-evenly;
+    justify-content: space-evenly;
     align-items: center;
-    padding:20px;
-    
+    padding: 20px;
+
 }
 
- .photo{
-     max-width:45%;
-     border: 5px solid cadetblue;
-     border-radius: 20px;
-     margin: 10px ;
-    
-     
- }
- .list{
-     width:45%;
-     font-size: 20px;
-     line-height: 3em;
-     margin:10px;  
- }
+.photo {
+    max-width: 45%;
+    border: 5px solid cadetblue;
+    border-radius: 20px;
+    margin: 10px;
 
-.test{
+
+}
+
+.list {
+    max-width: 45%;
+    font-size: 20px;
+    line-height: 3em;
+    margin: 10px;
+}
+
+.test {
     width: 100%;
     margin-top: 3vh;
 }
- 
- .down{
-     display: flex;
-     justify-content: space-evenly;
-     max-width: 100%;
-     border: 5px solid cadetblue;
-     border-radius: 20px;
-     padding: 5px;
- }
 
-.down_item{
+.down {
+    display: flex;
+    justify-content: space-evenly;
+    max-width: 100%;
+    border: 5px solid cadetblue;
+    border-radius: 20px;
+    padding: 5px;
+}
+
+.down_item {
     max-width: 23%;
     border-radius: 20px;
     margin: 5px;
@@ -88,107 +94,121 @@ h1,h2,h3{
     background-color: cadetblue;
 }
 
-.aside{
+.aside {
     max-width: 20vw;
     text-align: center;
-    
+
 }
-.aside_wrapper{
+
+.aside_wrapper {
     display: flex;
     width: 20vw;
     flex-direction: column;
     align-items: center;
 }
 
-.aside img{
+.aside img {
     max-width: 15vw;
 }
 
-.footer{
+.footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 8vh;
     margin-top: 10vh;
     background-color: cadetblue;
-    
+
 }
 
 
-.footer_item a{
+.footer_item a {
     display: inline-block;
     max-width: 15vw;
     text-align: center;
     text-decoration: none;
     font-size: 16px;
-    margin-left: 5vw; 
-    margin-right: 5vw;
-    color:cornsilk;       
+    margin: 3vw 5vw;
+    color: cornsilk;
 }
-.address{
-    padding:5px;
+
+.address {
+    padding: 5px;
     line-height: 0.3em;
     margin-left: 5vw;
-    color:cornsilk
+    color: cornsilk
 }
 
 
 
-@media all and (max-width:800px){
-    .menu_item{
+@media all and (max-width:800px) {
+    .menu_item {
         display: flex;
         flex-direction: column;
     }
-    
-    
-    .body_item{
+
+
+    .body_item {
         display: flex;
-        flex-direction: column;  
+        flex-direction: column;
     }
 
-    .main{
+    .main {
         max-width: 100vw;
     }
-    
-    .aside{
+
+    .aside {
         max-width: 100vw;
     }
-    .aside img{
-        max-width: 150px;
+
+    .aside img {
+        max-width: 200px;
     }
-        
-    .aside_wrapper{
+
+    .aside_wrapper {
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
         width: 100vw;
-        flex-wrap: wrap;    
+        flex-wrap: wrap;
     }
-    .down{
+
+    .down {
         flex-wrap: wrap;
         border: none;
     }
-    .down_item{
-        max-width:200px ;
+
+    .down_item {
+        max-width: 200px;
     }
 
-    
+
 }
 
-@media all and (max-width:600px){
-    .middle_item{
+@media all and (max-width:600px) {
+    .middle_item {
         display: flex;
         flex-direction: column;
     }
 
-    .photo{
+    .photo {
         max-width: 80vw;
+        margin: 0;
     }
-    .list{
-        line-height: 1 em;
-        font-size: 16px;
+
+    .photo img {
+        margin: 0;
     }
-    
+
+    .list {
+        max-width: 80vw;
+        font-size: 18px;
+        line-height: 2em;
+
+    }
+
+    .footer {
+        display: flex;
+        flex-direction: column;
+    }
+
 }
-
-
