--- a/week7/task1/style.css
+++ b/week7/task1/style.css
@@ -1,139 +1,214 @@
-.container {
-    display: grid;
-    width: 100%;
-    grid-template-columns: 1fr 1fr 20vw;
-    grid-template-rows: 7% 15% 1fr 5% 1fr 8%;
-    grid-template-areas:
-        "header header  header"
-        "intro intro aside"
-        "content1 content2  aside"
-        "content3 content3 aside"
-        "content4 content4 aside"
-        "footer footer footer";
+body {
     font-size: 16px;
     background-color: bisque;
+
 }
 
 h1,
 h2,
-h3,
-.aside p {
+h3 {
     text-align: center;
 }
 
 .header {
-    grid-area: header;
-    background-color: cadetblue;
-    display: grid;
-    grid-template-columns: 6vw 1fr;
-    grid-template-rows: 1fr;
+    display: flex;
     align-items: center;
-    justify-items: center;
+    background-color: cadetblue;
 }
 
 .logo img {
-    width: 4vw;
+    width: 70px;
     border-radius: 30%;
+    margin: 10px;
 }
 
 .menu_item {
-    justify-self: end;
+    margin-left: auto;
 }
 
 .menu_item a {
-    margin: 0 3vw 0 3vw;
     text-decoration: none;
-    font-size: 20px;
+    margin: 10px 25px;
+    font-size: 18px;
     font-weight: bold;
     color: cornsilk;
 }
 
+.body_item {
+    display: flex;
+}
+
+.main {
+    max-width: 80vw;
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .intro {
-    grid-area: intro;
-    padding: 15px;
+    padding: 20px;
 }
 
-.content1 {
-    grid-area: content1;
-    padding: 15px;
+.middle_item {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 20px;
+
 }
 
-.content1 img {
-    max-width: 95%;
+.photo {
+    max-width: 45%;
     border: 5px solid cadetblue;
     border-radius: 20px;
-}
+    margin: 10px;
 
-.content2 {
-    grid-area: content2;
-    align-self: center;
-    padding: 1vw;
+
 }
 
 .list {
-    max-width: 95%;
+    max-width: 45%;
     font-size: 20px;
-    line-height: 2em;
+    line-height: 3em;
     margin: 10px;
 }
 
-.content3 {
-    grid-area: content3;
+.test {
+    width: 100%;
+    margin-top: 3vh;
 }
 
-.content4 {
-    grid-area: content4;
-    justify-self: center;
-    display: grid;
-    gap: 10px;
-    grid-auto-flow: column;
-    justify-content: center;
+.down {
+    display: flex;
+    justify-content: space-evenly;
+    max-width: 100%;
     border: 5px solid cadetblue;
     border-radius: 20px;
-    padding: 15px;
+    padding: 5px;
 }
 
 .down_item {
-    justify-content: center;
-    min-height: fit-content;
-    padding: 10px;
+    max-width: 23%;
     border-radius: 20px;
+    margin: 5px;
+    padding: 5px;
     background-color: cadetblue;
-
-
 }
 
 .aside {
-    grid-area: aside;
-    justify-self: center;
+    max-width: 20vw;
+    text-align: center;
+
+}
+
+.aside_wrapper {
+    display: flex;
+    width: 20vw;
+    flex-direction: column;
+    align-items: center;
 }
 
 .aside img {
-    width: 15vw;
+    max-width: 15vw;
 }
 
-footer {
-    grid-area: footer;
-    background-color: cadetblue;
-    margin-top: 4vh;
-    display: grid;
-    grid-template-columns: 250px 1fr;
-    grid-template-rows: 1fr;
-    display: grid;
+.footer {
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-    justify-items: end;
+    margin-top: 10vh;
+    background-color: cadetblue;
+
 }
+
 
 .footer_item a {
-    margin-left: 3vw;
-    margin-right: 3vw;
+    display: inline-block;
+    max-width: 15vw;
+    text-align: center;
     text-decoration: none;
-    font-size: large;
+    font-size: 16px;
+    margin: 3vw 5vw;
     color: cornsilk;
 }
 
 .address {
-    margin-left: 3vw;
-    line-height: 0.5em;
+    padding: 5px;
+    line-height: 0.3em;
+    margin-left: 5vw;
     color: cornsilk
+}
+
+
+
+@media all and (max-width:800px) {
+    .menu_item {
+        display: flex;
+        flex-direction: column;
+    }
+
+
+    .body_item {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .main {
+        max-width: 100vw;
+    }
+
+    .aside {
+        max-width: 100vw;
+    }
+
+    .aside img {
+        max-width: 200px;
+    }
+
+    .aside_wrapper {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        width: 100vw;
+        flex-wrap: wrap;
+    }
+
+    .down {
+        flex-wrap: wrap;
+        border: none;
+    }
+
+    .down_item {
+        max-width: 200px;
+    }
+
+
+}
+
+@media all and (max-width:600px) {
+    .middle_item {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .photo {
+        max-width: 80vw;
+        margin: 0;
+    }
+
+    .photo img {
+        margin: 0;
+    }
+
+    .list {
+        max-width: 80vw;
+        font-size: 18px;
+        line-height: 2em;
+
+    }
+
+    .footer {
+        display: flex;
+        flex-direction: column;
+    }
+
 }
