--- a/week18-JS/style.css
+++ b/week18-JS/style.css
@@ -32,7 +32,6 @@ input:required:valid{
     width: 400px;
     font-size: 14px;
     color:deeppink;
-    
     margin:20px 0;
 }
 
@@ -41,4 +40,32 @@ input:required:valid{
     font-size: 20px;
     color:rgb(7, 173, 82);
     text-align: center;
+}
+
+/*task3*/
+
+.task3{
+    width:800px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.textarea{
+    width:500px;
+    height: 100px;
+    margin:20px 0;
+}
+
+.output{
+    width:500px;
+    height: 200px;
+    border: 1px solid black;
 }
