--- a/Week19-JS/style.css
+++ b/Week19-JS/style.css
@@ -24,3 +24,25 @@ body{
 input:required:valid{
     border-color: rgb(40, 228, 40);
 }
+
+
+/* Task3*/
+
+.task3{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.btn_calc{
+    width:50px;
+    height: 50px;
+    background-color: deeppink;
+    border:none;
+    border-radius: 20px;
+    cursor: pointer;
+    color: white;
+    margin: 20px 0;
+}
