--- a/week21-JS/Task1/style.css
+++ b/week21-JS/Task1/style.css
@@ -27,7 +27,15 @@ body{
     font-size: 20px;
 }
 
+.output{
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .pics{
     margin: 30px 20px ;
+    width: 250px;
+    object-fit: cover;
+    
 }
 
