--- a/week21-JS/Task2-3/style.css
+++ b/week21-JS/Task2-3/style.css
@@ -36,8 +36,8 @@ input:required:valid{
     margin:20px 0;
 }
 
-#welcome{
-    width: 400px;
+#welcome, #saved{
+    width: 500px;
     font-size: 20px;
     color:rgb(7, 173, 82);
     
