--- a/week22-JS/Task2/style.css
+++ b/week22-JS/Task2/style.css
@@ -17,4 +17,9 @@ h1{text-align: center;
     text-align: center;
     font-size: 20px;
     padding-top: 20px;
+    margin-bottom: 50px;
+}
+
+.chart{
+    
 }
