--- a/week22-JS/Task2/style.css
+++ b/week22-JS/Task2/style.css
@@ -1,3 +1,7 @@
+body{
+    background-color: black;
+}
+
 .wrapper{
     display:flex;
     flex-direction:column;
@@ -6,6 +10,9 @@
 
 h1{text-align: center;
     font-size: 40px;
+    font-style: italic;
+    text-decoration-line: underline ;
+    color: cornsilk;
 
 }
 
@@ -13,13 +20,17 @@ h1{text-align: center;
     height: 50px;
     width: 400px;
     color:coral;
-    border: 3px solid red;
+    border: 3px solid coral;
     text-align: center;
     font-size: 20px;
     padding-top: 20px;
     margin-bottom: 50px;
 }
 
-.chart{
-    
+p{
+    color: cornsilk;
+    text-align: center;
+    font-size: 20px;
+    margin-top: 20px ;
 }
+
